--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
+      <title>Calculadora IMC</title>
       <link rel="stylesheet" href="mian.css" />
    </head>
    <body>
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                <td>Menor que 18,5</td>
-               <td>Magreza</td>
+               <td>Abaixo do peso</td>
             </tr>
             <tr class="head">
                <td>18,5 a 24,9</td>
